<resources>
    <string name="app_name">Nextbook</string>
    <string name="next">Next</string>
    <string name="cont">Continue</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="create_an_account_for_a_personalized_experience">Create an account for a personalized experience</string>
    <string name="password">Password</string>
    <string name="handler">Handler</string>
    <string name="fullname">Fullname</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>
    <string name="discussion">Discussion</string>
    <string name="menu">Menu</string>
    <string name="status">Status</string>
    <string name="story">Story</string>
    <string name="android_dev">Victor Loveday</string>
    <string name="me">Me</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
</resources>